# mDNSResponder-Linux

./: CMakeLists.txt  toolchain.cmake
Clients/FirefoxExtension/: FirefoxExtension.vcxproj
mDNSPosix/: CMakeLists.txt  Makefile
